fix: align text center in all screens

--- a/react-app/src/components/layouts/how-to-get-a-video-message/styles.scss
+++ b/react-app/src/components/layouts/how-to-get-a-video-message/styles.scss
@@ -34,9 +34,7 @@
   }
 
   &__step-item {
-    @media only screen and (min-width: 768px) {
-      text-align: center;
-    }
+    text-align: center;
   }
 
   &__step-number {
